modules/network/sg_public.tf
resource "aws_security_group" "public" {
  name        = "${local.cluster_id}-public"
  description = "Cluster node group for ${local.cluster_id}"

  vpc_id = aws_vpc.cluster.id

  ingress {
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  ingress {
    from_port        = 6443
    to_port          = 6443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = merge({
    Name = "${local.cluster_id}-public",
  }, local.cluster_tag)


  lifecycle {
    ignore_changes = ["tags"]
  }
}
